Fri Dec  3 00:11:48 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_file_initialize): [ruby-dev:25032]

Thu Dec  2 16:41:03 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_protect): prevent continuations created inside from being
	  called from the outside.  [ruby-dev:25003]

	* eval.c (rb_callcc, rb_cont_call): prohibit calling from different
	  signal contexts.  [ruby-dev:25022]

Thu Dec  2 10:45:02 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* test/readline/test_readline.rb: fix for NetBSD.

Thu Dec  2 09:57:24 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/ostruct.rb (OpenStruct::Marshaler): OpenStruct can be
	  marshaled again.  [ruby-core:03862]

Thu Dec  2 09:30:58 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (thread_mark): mark thread group.  [ruby-dev:25020]

	* eval.c (thgroup_add): check whether the argument is really a Thread.

Thu Dec  2 07:57:16 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_ctl): [ruby-dev:25019]

Wed Dec  1 06:13:00 2004  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf.c: add constant NKF::VERSION

	* ext/nkf/nkf.c(guess): this becomes an alias of guess2

	* ext/nkf/test.rb: add --no-cp932

	* ext/nkf/nkf-utf8/nkf.c: original nkf2 revision 1.47

Wed Dec  1 02:21:02 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* signal.c (sighandler): call handler immediately only for default
	  handlers.  [ruby-dev:25003]

Tue Nov 30 23:49:12 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (pipe_open): errno should be preserved for rb_sys_fail() when
	  fork failed.

Tue Nov 30 16:18:50 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (io_fread): need not to null terminate.  [ruby-dev:24998]

	* eval.c (rb_eval): should check previous frame for ZSUPER.

	* io.c (read_all): remove unnecessary rb_str_resize().
	  [ruby-dev:24996]

	* io.c (io_readpartial): ditto.

	* io.c (io_read): ditto.

Tue Nov 30 14:58:33 2004  WATANABE Hirofumi  <eban@ruby-lang.org>
