@@ -1,1 +1,10 @@
-[true, "Site,SANs,Array\nConfigured Capacity,Array Reserved Capacity,Array Ava\nilable Capacity,Array % Reserved,Host Allocated,Host Used,Host Free,Host %\nUsed\n"]
+--- 
+- true
+- >
+  Site,SANs,Array
+
+  Configured Capacity,Array Reserved Capacity,Array Ava
+
+  ilable Capacity,Array % Reserved,Host Allocated,Host Used,Host Free,Host %
+
+  Used
