@@ -1,1 +1,243 @@
-[true, [{"subscriber"=>"MegaCorp", "lastName"=>"Baker", "telephone1"=>"1-508-791-1267", "telephone2"=>"1-800-445-2588", "password"=>"p1111", "OID"=>"1", "email"=>"hbaker@yahoo.com", "adminId"=>"hbaker", "objectName"=>"AdministratorDO"}, {"subscriber"=>"CornerStore", "lastName"=>"Dragon", "telephone1"=>"1-781-789-9089", "telephone2"=>"1-800-445-2588", "password"=>"p3333", "OID"=>"3", "email"=>"adragon@yahoo.com", "adminId"=>"adragon", "objectName"=>"AdministratorDO"}, {"subscriber"=>"Cyberdyne", "lastName"=>"Rodman", "telephone1"=>"1-617-789-1890", "telephone2"=>"1-800-445-2588", "password"=>"p4444", "OID"=>"4", "email"=>"mrodman@yahoo.com", "adminId"=>"mrodman", "objectName"=>"AdministratorDO"}, {"subscriber"=>"StarSports", "lastName"=>"Jordan", "telephone1"=>"1-617-890-7897", "telephone2"=>"1-800-445-2588", "password"=>"p5555", "OID"=>"5", "email"=>"mjordan@yahoo.com", "adminId"=>"mjordan", "objectName"=>"AdministratorDO"}, {"subscriber"=>"GreatBooks", "lastName"=>"Pippen", "telephone1"=>"1-781-789-9876", "telephone2"=>"1-800-445-2588", "password"=>"p6666", "OID"=>"6", "email"=>"gpippen@yahoo.com", "adminId"=>"gpippen", "objectName"=>"AdministratorDO"}, {"subscriber"=>"AxisChemicals", "lastName"=>"Andhrew", "telephone1"=>"1-781-678-8970", "telephone2"=>"1-800-445-2588", "password"=>"p7777", "OID"=>"7", "email"=>"aandrew@yahoo.com", "adminId"=>"aandrew", "objectName"=>"AdministratorDO"}, {"subscriber"=>"MediaShop", "lastName"=>"Vincent", "telephone1"=>"1-786-897-8908", "telephone2"=>"1-800-445-2588", "password"=>"p8888", "OID"=>"8", "email"=>"tvincent@yahoo.com", "adminId"=>"tvincent", "objectName"=>"AdministratorDO"}, {"subscriber"=>"SmartShop", "lastName"=>"Richard", "telephone1"=>"1-508-789-6789", "telephone2"=>"1-800-445-2588", "password"=>"p9999", "OID"=>"9", "email"=>"krichard@yahoo.com", "adminId"=>"krichard", "objectName"=>"AdministratorDO"}, {"subscriber"=>"HomeNeeds", "lastName"=>"Cornell", "telephone1"=>"1-617-789-8979", "telephone2"=>"1-800-445-2588", "password"=>"paaaa", "OID"=>"10", "email"=>"gconell@yahoo.com", "adminId"=>"gcornell", "objectName"=>"AdministratorDO"}, {"subscriber"=>"MegaCorp", "lastName"=>"HorstMann", "telephone1"=>"1-508-791-1267", "telephone2"=>"1-800-445-2588", "password"=>"p1111", "OID"=>"11", "email"=>"shorstmann@yahoo.com", "adminId"=>"shorstmann", "objectName"=>"AdministratorDO"}, {"subscriber"=>"CornerStore", "lastName"=>"Bob", "telephone1"=>"1-781-789-9089", "telephone2"=>"1-800-445-2588", "password"=>"p3333", "OID"=>"13", "email"=>"rbob@yahoo.com", "adminId"=>"rbob", "objectName"=>"AdministratorDO"}, {"subscriber"=>"Cyberdyne", "lastName"=>"Peter", "telephone1"=>"1-617-789-1890", "telephone2"=>"1-800-445-2588", "password"=>"p4444", "OID"=>"14", "email"=>"speter@yahoo.com", "adminId"=>"speter", "objectName"=>"AdministratorDO"}, {"subscriber"=>"StarSports", "lastName"=>"Novak", "telephone1"=>"1-617-890-7897", "telephone2"=>"1-800-445-2588", "password"=>"p5555", "OID"=>"15", "email"=>"pnovak@yahoo.com", "adminId"=>"pnovak", "objectName"=>"AdministratorDO"}, {"subscriber"=>"GreatBooks", "lastName"=>"Nancy", "telephone1"=>"1-781-789-9876", "telephone2"=>"1-800-445-2588", "password"=>"p6666", "OID"=>"16", "email"=>"pnancy@yahoo.com", "adminId"=>"pnancy", "objectName"=>"AdministratorDO"}, {"subscriber"=>"AxisChemicals", "lastName"=>"Michel", "telephone1"=>"1-781-678-8970", "telephone2"=>"1-800-445-2588", "password"=>"p7777", "OID"=>"17", "email"=>"hmichel@yahoo.com", "adminId"=>"hmichel", "objectName"=>"AdministratorDO"}, {"subscriber"=>"MediaShop", "lastName"=>"David", "telephone1"=>"1-786-897-8908", "telephone2"=>"1-800-445-2588", "password"=>"p8888", "OID"=>"18", "email"=>"kdavid@yahoo.com", "adminId"=>"kdavid", "objectName"=>"AdministratorDO"}, {"subscriber"=>"SmartShop", "lastName"=>"Valnoor", "telephone1"=>"1-508-789-6789", "telephone2"=>"1-800-445-2588", "password"=>"p9999", "OID"=>"19", "email"=>"pvalnoor@yahoo.com", "adminId"=>"pvalnoor", "objectName"=>"AdministratorDO"}, {"subscriber"=>"HomeNeeds", "lastName"=>"Smith", "telephone1"=>"1-617-789-8979", "telephone2"=>"1-800-445-2588", "password"=>"paaaa", "OID"=>"20", "email"=>"wsmith@yahoo.com", "adminId"=>"wsmith", "objectName"=>"AdministratorDO"}, {"subscriber"=>"MegaCorp", "lastName"=>"Caral", "telephone1"=>"1-781-789-9876", "telephone2"=>"1-800-445-2588", "password"=>"p6666", "OID"=>"21", "email"=>"gcaral@yahoo.com", "adminId"=>"gcaral", "objectName"=>"AdministratorDO"}, {"subscriber"=>"CornerStore", "lastName"=>"Hillary", "telephone1"=>"1-786-897-8908", "telephone2"=>"1-800-445-2588", "password"=>"p8888", "OID"=>"23", "email"=>"phillary@yahoo.com", "adminId"=>"phillary", "objectName"=>"AdministratorDO"}, {"subscriber"=>"Cyberdyne", "lastName"=>"Philip", "telephone1"=>"1-508-789-6789", "telephone2"=>"1-800-445-2588", "password"=>"p9999", "OID"=>"24", "email"=>"bphilip@yahoo.com", "adminId"=>"bphilip", "objectName"=>"AdministratorDO"}, {"subscriber"=>"StarSports", "lastName"=>"Andrea", "telephone1"=>"1-617-789-8979", "telephone2"=>"1-800-445-2588", "password"=>"paaaa", "OID"=>"25", "email"=>"sandrea@yahoo.com", "adminId"=>"sandrea", "objectName"=>"AdministratorDO"}, {"subscriber"=>"s4", "lastName"=>"null", "telephone1"=>"null", "telephone2"=>"null", "password"=>"s4", "OID"=>"26", "email"=>"null", "adminId"=>"s4", "objectName"=>"AdministratorDO"}, {"subscriber"=>"BigBank", "lastName"=>"administrator", "telephone1"=>"", "telephone2"=>"", "password"=>"admin", "OID"=>"82", "email"=>"", "adminId"=>"admin", "objectName"=>"AdministratorDO"}]]
+--- 
+- true
+- 
+  - 
+    subscriber: MegaCorp
+    lastName: Baker
+    telephone1: 1-508-791-1267
+    telephone2: 1-800-445-2588
+    password: p1111
+    OID: "1"
+    email: hbaker@yahoo.com
+    adminId: hbaker
+    objectName: AdministratorDO
+  - 
+    subscriber: CornerStore
+    lastName: Dragon
+    telephone1: 1-781-789-9089
+    telephone2: 1-800-445-2588
+    password: p3333
+    OID: "3"
+    email: adragon@yahoo.com
+    adminId: adragon
+    objectName: AdministratorDO
+  - 
+    subscriber: Cyberdyne
+    lastName: Rodman
+    telephone1: 1-617-789-1890
+    telephone2: 1-800-445-2588
+    password: p4444
+    OID: "4"
+    email: mrodman@yahoo.com
+    adminId: mrodman
+    objectName: AdministratorDO
+  - 
+    subscriber: StarSports
+    lastName: Jordan
+    telephone1: 1-617-890-7897
+    telephone2: 1-800-445-2588
+    password: p5555
+    OID: "5"
+    email: mjordan@yahoo.com
+    adminId: mjordan
+    objectName: AdministratorDO
+  - 
+    subscriber: GreatBooks
+    lastName: Pippen
+    telephone1: 1-781-789-9876
+    telephone2: 1-800-445-2588
+    password: p6666
+    OID: "6"
+    email: gpippen@yahoo.com
+    adminId: gpippen
+    objectName: AdministratorDO
+  - 
+    subscriber: AxisChemicals
+    lastName: Andhrew
+    telephone1: 1-781-678-8970
+    telephone2: 1-800-445-2588
+    password: p7777
+    OID: "7"
+    email: aandrew@yahoo.com
+    adminId: aandrew
+    objectName: AdministratorDO
+  - 
+    subscriber: MediaShop
+    lastName: Vincent
+    telephone1: 1-786-897-8908
+    telephone2: 1-800-445-2588
+    password: p8888
+    OID: "8"
+    email: tvincent@yahoo.com
+    adminId: tvincent
+    objectName: AdministratorDO
+  - 
+    subscriber: SmartShop
+    lastName: Richard
+    telephone1: 1-508-789-6789
+    telephone2: 1-800-445-2588
+    password: p9999
+    OID: "9"
+    email: krichard@yahoo.com
+    adminId: krichard
+    objectName: AdministratorDO
+  - 
+    subscriber: HomeNeeds
+    lastName: Cornell
+    telephone1: 1-617-789-8979
+    telephone2: 1-800-445-2588
+    password: paaaa
+    OID: "10"
+    email: gconell@yahoo.com
+    adminId: gcornell
+    objectName: AdministratorDO
+  - 
+    subscriber: MegaCorp
+    lastName: HorstMann
+    telephone1: 1-508-791-1267
+    telephone2: 1-800-445-2588
+    password: p1111
+    OID: "11"
+    email: shorstmann@yahoo.com
+    adminId: shorstmann
+    objectName: AdministratorDO
+  - 
+    subscriber: CornerStore
+    lastName: Bob
+    telephone1: 1-781-789-9089
+    telephone2: 1-800-445-2588
+    password: p3333
+    OID: "13"
+    email: rbob@yahoo.com
+    adminId: rbob
+    objectName: AdministratorDO
+  - 
+    subscriber: Cyberdyne
+    lastName: Peter
+    telephone1: 1-617-789-1890
+    telephone2: 1-800-445-2588
+    password: p4444
+    OID: "14"
+    email: speter@yahoo.com
+    adminId: speter
+    objectName: AdministratorDO
+  - 
+    subscriber: StarSports
+    lastName: Novak
+    telephone1: 1-617-890-7897
+    telephone2: 1-800-445-2588
+    password: p5555
+    OID: "15"
+    email: pnovak@yahoo.com
+    adminId: pnovak
+    objectName: AdministratorDO
+  - 
+    subscriber: GreatBooks
+    lastName: Nancy
+    telephone1: 1-781-789-9876
+    telephone2: 1-800-445-2588
+    password: p6666
+    OID: "16"
+    email: pnancy@yahoo.com
+    adminId: pnancy
+    objectName: AdministratorDO
+  - 
+    subscriber: AxisChemicals
+    lastName: Michel
+    telephone1: 1-781-678-8970
+    telephone2: 1-800-445-2588
+    password: p7777
+    OID: "17"
+    email: hmichel@yahoo.com
+    adminId: hmichel
+    objectName: AdministratorDO
+  - 
+    subscriber: MediaShop
+    lastName: David
+    telephone1: 1-786-897-8908
+    telephone2: 1-800-445-2588
+    password: p8888
+    OID: "18"
+    email: kdavid@yahoo.com
+    adminId: kdavid
+    objectName: AdministratorDO
+  - 
+    subscriber: SmartShop
+    lastName: Valnoor
+    telephone1: 1-508-789-6789
+    telephone2: 1-800-445-2588
+    password: p9999
+    OID: "19"
+    email: pvalnoor@yahoo.com
+    adminId: pvalnoor
+    objectName: AdministratorDO
+  - 
+    subscriber: HomeNeeds
+    lastName: Smith
+    telephone1: 1-617-789-8979
+    telephone2: 1-800-445-2588
+    password: paaaa
+    OID: "20"
+    email: wsmith@yahoo.com
+    adminId: wsmith
+    objectName: AdministratorDO
+  - 
+    subscriber: MegaCorp
+    lastName: Caral
+    telephone1: 1-781-789-9876
+    telephone2: 1-800-445-2588
+    password: p6666
+    OID: "21"
+    email: gcaral@yahoo.com
+    adminId: gcaral
+    objectName: AdministratorDO
+  - 
+    subscriber: CornerStore
+    lastName: Hillary
+    telephone1: 1-786-897-8908
+    telephone2: 1-800-445-2588
+    password: p8888
+    OID: "23"
+    email: phillary@yahoo.com
+    adminId: phillary
+    objectName: AdministratorDO
+  - 
+    subscriber: Cyberdyne
+    lastName: Philip
+    telephone1: 1-508-789-6789
+    telephone2: 1-800-445-2588
+    password: p9999
+    OID: "24"
+    email: bphilip@yahoo.com
+    adminId: bphilip
+    objectName: AdministratorDO
+  - 
+    subscriber: StarSports
+    lastName: Andrea
+    telephone1: 1-617-789-8979
+    telephone2: 1-800-445-2588
+    password: paaaa
+    OID: "25"
+    email: sandrea@yahoo.com
+    adminId: sandrea
+    objectName: AdministratorDO
+  - 
+    subscriber: s4
+    lastName: "null"
+    telephone1: "null"
+    telephone2: "null"
+    password: s4
+    OID: "26"
+    email: "null"
+    adminId: s4
+    objectName: AdministratorDO
+  - 
+    subscriber: BigBank
+    lastName: administrator
+    telephone1: ''
+    telephone2: ''
+    password: admin
+    OID: "82"
+    email: ''
+    adminId: admin
+    objectName: AdministratorDO
