@@ -1,3 +1,9 @@
+Thu Dec  2 15:13:53 2004  Michael Neumann  <mneumann@ruby-lang.org>
+
+	* test/xmlrpc/test_parser.rb, test/xmlrpc/data/*.expected: Expected
+	  values are now stored in YAML instead of using #inspect. This fixes
+	  false hash order.
+
 Fri Dec  3 00:11:48 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* io.c (rb_file_initialize): [ruby-dev:25032]
